# tauri-kits

./: .gitignore  AGENTS  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml
.trae/: config.yaml
.trae/rules/: git-commit-message.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  lib.rs  main.rs
src/api/: bar.json  db.ts  line.json  pie.json  request.ts  user.ts
src/components/: Chart.scss  Chart.tsx  Dashboard.tsx  Icon.scss  Icon.tsx  Layout.scss  Layout.tsx  Login.scss  Login.tsx  User.scss  User.tsx
src/components/chart/: Bar.tsx  Line.tsx  Pie.tsx
src/components/layout/: BreadCrumb.tsx  Footer.tsx  Header.tsx  Logo.scss  Logo.tsx  Menu.tsx
src/components/user/: Form.tsx
src/lang/: en.ts  index.ts  zh.ts
src/router/: index.tsx
src/store/: index.tsx
src/utils/: date.ts
