[package]
name = "tauri-kits"
version = "0.1.0"
description = "A Tauri App"
authors = ["Shing Rui <sunquakes@outlook.com>"]
edition = "2021"

[lib]
name = "tauri_kits_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
md-5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
